--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
-//    api files('libs/gson-2.9.0.jar')
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
